Fixed roll button alignment issues.

--- a/systems/dnd4e/css/dnd4e.css
+++ b/systems/dnd4e/css/dnd4e.css
@@ -420,7 +420,7 @@ img.portrait
 .stat-group.attributes .stat .btn.btn-mini,
 .stat-group.skills .stat .btn.btn-mini
 {
-    margin-top: 0;
+    margin-top: -3px;
     padding-top: 0;
     padding-bottom: 0;
 }
